sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: type mismatch;
 found   : Boolean(true)
 required: Int
  var a:Int = true
              ^AlgCocktailSort1:5: error: type mismatch;
 found   : Boolean(true)
 required: Int
    a = true
        ^AlgCocktailSort1:9: error: type mismatch;
 found   : Boolean(false)
 required: Int
        a=false
          ^AlgCocktailSort1:15: error: type mismatch;
 found   : Boolean(false)
 required: Int
        a=false
          ^